--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.cdnfonts.com/css/mars-2');
 .h-scree{
   height: 100%;
+}
+.mars{
+  font-family: 'MARS', sans-serif;
+  line-height: 5rem;
+  color: #fff;
 }
 .tooltip {
     position: relative;
